--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,8 @@
-header, .project:not(:last-child) {
-  border-bottom: 1px solid #ccc;
+
+.gradient-bg {
+  background: rgb(247, 207, 100);
+  background: linear-gradient(0deg, rgba(247, 207, 100, 1) 6%, rgba(6, 91, 131, 1) 62%, rgba(45, 62, 80, 1) 95%);
 }
 
-.no-button {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  color: #1b89bc;
-  text-decoration: none;
-  font-size: 100%;
-}
 
-.no-button:hover {
-  color: #065b83;
-  text-decoration: underline;
-}
 
-.dollar-amount {
-  color: #056605;
-  font-weight: bold;
-  margin-left: -5px;
-}
