--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,15 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fund My Project!</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' />
+  <link rel="stylesheet" href="../../public/css/style.css">
 </head>
 
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
+  <div class="flex-column justify-space-around gradient-bg">
+    <header class="d-f justify-content-between align-items-center p-1">
       <h1>
-        <span role="img" aria-label="money">💸</span>
         <a href="/">Fund My Project!</a>
       </h1>
       <nav>
@@ -31,7 +30,7 @@
       {{{ body }}}
     </main>
     <footer>
-      
+   
     </footer>
   </div>
 
