--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,14 +1,27 @@
 <div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
+  <h2>{{title}}</h2>
+
   <p>{{description}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>
-    <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
-  </p>
-  <p>
-    <button class="btn btn-primary">Fund this Project!</button>
-  </p>
+  {{#each comments as |comment| }}
+    <div class="d-flex">{{comment.title}}</div>
+    <div class="d-flex">{{comment.date_created}} {{user.id}}</div>
+
+    {{/each}}
+  
 </div>
+
+
+{{!-- add a comment by adding a form, don't show comment on home page  --}}
+<form class="form new-comment-form">
+      <div class="form-group">
+        <input value='{{id}}' type='hidden' name='post_id' /> 
+        <label for="comment-desc">description:</label>
+        <textarea class="form-input" id="comment-desc" name="comment-desc"></textarea>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Create</button>
+      </div>
+    </form>
+
+<script src="../js/post.js"></script>
