--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fund My Project!</title>
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' />
-  <link rel="stylesheet" href="../../public/css/style.css">
+  <link rel='stylesheet' type="text/css" href='/css/style.css' />
 </head>
 
 <body>
@@ -29,9 +28,7 @@
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
-    <footer>
-   
-    </footer>
+
   </div>
 
   <!-- Render script for logged in users only -->
