--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,25 +3,44 @@
 
   <p>{{description}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  <form class="form delete-comment-form">
   {{#each comments as |comment| }}
-    <div class="d-flex">{{comment.title}}</div>
-    <div class="d-flex">{{comment.date_created}} {{user.id}}</div>
-
+    <div class="d-flex p-1">
+    <div> {{user.name}} on {{format_date date_created}}: {{comment.title}}
+      <button type="submit" data-action="{{comment.id}}" class="btn btn-primary">Delete</button>
+    </div>
+    {{!-- <div class="d-flex">-Created by: {{user.name}} on {{format_date date_created}}</div> --}}
+  </div>
+    {{!-- <div class="d-flex">{{comment.date_created}} {{user.id}}</div> --}}
     {{/each}}
-  
+   </form>
 </div>
+<form class="form update-comment-form">
+      <div class="form-group d-flex">
+        <input value='{{id}}' type='hidden' name='post_id' />
+        <label for="comment-desc">Add a comment:</label>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Update Post</button>
+      </div>
+    </form>
 
 
 {{!-- add a comment by adding a form, don't show comment on home page  --}}
+{{#if logged_in}}
 <form class="form new-comment-form">
-      <div class="form-group">
-        <input value='{{id}}' type='hidden' name='post_id' /> 
-        <label for="comment-desc">description:</label>
+      <div class="form-group d-flex">
+        <input value='{{id}}' type='hidden' name='post_id' />
+        <label for="comment-desc">Add a comment:</label>
         <textarea class="form-input" id="comment-desc" name="comment-desc"></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
       </div>
     </form>
-
+{{else}}
+<div class="form-group">
+  <a href="/login">Log in</a>
+</div>
+{{/if}}
 <script src="../js/post.js"></script>
