--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
   <div class="flex-column justify-space-around gradient-bg">
     <header class="d-f justify-content-between align-items-center p-1">
       <h1>
-        <a href="/">Fund My Project!</a>
+        <a href="/">Tech Blog</a>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
