--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,43 +1,48 @@
 <div class="text-center">
   <h2>{{title}}</h2>
-
-  <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <form class="form delete-comment-form">
+    <p>{{description}}</p>
+    <p>Created by {{user.name}} on {{format_date date_created}}</p>
+<form class="form delete-comment-form">
   {{#each comments as |comment| }}
-    <div class="d-flex p-1">
-    <div> {{user.name}} on {{format_date date_created}}: {{comment.title}}
-      <button type="submit" data-action="{{comment.id}}" class="btn btn-primary">Delete</button>
-    </div>
-    {{!-- <div class="d-flex">-Created by: {{user.name}} on {{format_date date_created}}</div> --}}
+  <div class="d-flex p-1">
+      <div> {{user.name}} on {{format_date date_created}}: {{comment.title}}
+        <button type="submit" data-action="{{comment.id}}" class="btn btn-primary">Delete</button>
+      </div>
   </div>
-    {{!-- <div class="d-flex">{{comment.date_created}} {{user.id}}</div> --}}
     {{/each}}
-   </form>
+</form>
+{{!-- update button --}}
+<div id="myForm">
+  <form class="update-post-form">
+    <h1>Update the Post</h1>
+    <input value='{{id}}' type='hidden' name='post_id' />
+
+    <label><b>Title</b></label>
+    <input id="update-title" name="title" required>
+
+    <label><b>Description</b></label>
+    <input id="update-desc" name="description" required>
+
+    <button type="submit" class="btn">Update</button>
+    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+  </form>
 </div>
-<form class="form update-comment-form">
-      <div class="form-group d-flex">
-        <input value='{{id}}' type='hidden' name='post_id' />
-        <label for="comment-desc">Add a comment:</label>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Update Post</button>
-      </div>
-    </form>
+
+</div>
 
 
 {{!-- add a comment by adding a form, don't show comment on home page  --}}
 {{#if logged_in}}
 <form class="form new-comment-form">
-      <div class="form-group d-flex">
-        <input value='{{id}}' type='hidden' name='post_id' />
+  <div class="form-group d-flex">
+    <input value='{{id}}' type='hidden' name='post_id' />
         <label for="comment-desc">Add a comment:</label>
-        <textarea class="form-input" id="comment-desc" name="comment-desc"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
-      </div>
-    </form>
+          <textarea class="form-input" id="comment-desc" name="comment-desc"></textarea>
+  </div>
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary">Create</button>
+  </div>
+</form>
 {{else}}
 <div class="form-group">
   <a href="/login">Log in</a>
