updated styling except profile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,30 @@
-.gradient-bg {
-  background: rgb(247, 207, 100);
-  background: linear-gradient(0deg, rgba(247, 207, 100, 1) 6%, rgba(6, 91, 131, 1) 62%, rgba(45, 62, 80, 1) 95%);
+a:hover {
+  cursor: pointer;
+  color: blue;
+}
+
+h1 {
+  text-align: center;
+}
+
+textarea {
+  width: 200px;
+  height: 40px;
 }
 
 
+.card {
+  background-color: #6C757D;
+}
 
+.ta-c {
+  text-align: center;
+}
+
+.txt-dec {
+  text-decoration:  none;
+  color: black;
+}
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
   background-color: #555;
@@ -19,14 +39,14 @@
   width: 280px;
 }
 
-/* The popup form - hidden by default */
-/* .form-popup {
+/*The popup form - hidden by default */
+.form-popup {
   position: fixed;
   bottom: 0;
   right: 15px;
   border: 3px solid #f1f1f1;
   z-index: 9;
-} */
+}
 
 /* Add styles to the form container */
 .form-container {
@@ -70,4 +90,9 @@
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
+}
+
+
+.update-form {
+  justify-content: right;
 }
