--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,22 @@
 <!-- Loop over each object in the projects array -->
 {{#each posts as |post| }}
-<div class="row mb-4 post">
-  <div class="col-md-5">
-    <h2>
+    {{!-- bootstrap card --}}
+<div class="card text-center m-5">
+  <div class="card-header text-white">
+    Featured
+  </div>
+  <div class="card-body">
+    {{!-- <h5 class="card-title">Special title treatment</h5> --}}
+    <h2 class="card-title">
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/post/{{post.id}}">{{post.title}}</a>
+      <p class="txt-dec text-white">{{post.title}}</p>
     </h2>
-    <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
+    <p class="text-white">{{post.description}}</p>
+    <a href="/post/{{post.id}}" class="btn btn-primary">View</a>
   </div>
-  <div class="col-md-7">
-    <p>
-      {{post.description}}
-    </p>
+  <div class="card-footer text-white">
+        <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
+
   </div>
+</div>
 {{/each}}
