--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row d-flex justify-content-center">
   <div class="col-auto">
     <h2>Welcome, {{name}}!</h2>
   </div>
@@ -6,16 +6,16 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Post:</h3>
+    <h3 class="m-1">Create a New Post:</h3>
 
     <form class="form new-post-form">
-      <div class="form-group">
-        <label for="post-name">post name:</label>
+      <div class="form-group p-1">
+        <label for="post-name">Post Name:</label>
         <input class="form-input" type="text" id="post-name" name="post-name" />
       </div>
       <div class="form-group">
-        <label for="post-desc">description:</label>
-        <textarea class="form-input" id="post-desc" name="post-desc"></textarea>
+        <label for="post-desc">Description:</label>
+        <input class="form-input" id="post-desc" name="post-desc"></input>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
